Added Upgrade script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "iso country conversions to name and Unicode flag",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "update": "npx npm-check-updates -u && npm i"
   },
   "repository": {
     "type": "git",
