--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "iso-country-conversion",
-  "version": "1.0.1",
+  "name": "@greifmatthias/iso-countries",
+  "version": "2.0.0",
   "description": "iso country conversions to name and Unicode flag",
-  "main": "index.js",
+  "main": "index.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/greifmatthias/iso-countries.git"
@@ -19,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/greifmatthias/iso-countries/issues"
   },
-  "homepage": "https://github.com/greifmatthias/iso-countries#readme"
+  "homepage": "https://github.com/greifmatthias/iso-countries#readme",
+  "devDependencies": {
+    "typescript": "5.0.4",
+    "npm-check-updates": "16.10.12"
+  }
 }
